# sdk.emulator-yagl

./: CMakeLists.txt  COPYING  LICENSE.MIT  NOTICE  project.config
CMake/: WPCodegenTarget.cmake
EGL/: CMakeLists.txt  yagl_avl.c  yagl_avl.h  yagl_backend.h  yagl_client_image.c  yagl_context.c  yagl_context.h  yagl_display.c  yagl_display.h  yagl_egl_calls.c  yagl_egl_calls.in  yagl_egl_fence.c  yagl_egl_state.c  yagl_egl_state.h  yagl_fence.c  yagl_fence.h  yagl_host_egl_calls.c  yagl_host_egl_calls.h  yagl_image.c  yagl_image.h  yagl_log.c  yagl_malloc.c  yagl_namespace.c  yagl_native_display.c  yagl_native_display.h  yagl_native_drawable.c  yagl_native_drawable.h  yagl_native_image.c  yagl_native_image.h  yagl_native_platform.c  yagl_native_platform.h  yagl_native_types.h  yagl_object.c  yagl_offscreen.c  yagl_offscreen.h  yagl_offscreen_image_pixmap.c  yagl_offscreen_image_pixmap.h  yagl_offscreen_surface.c  yagl_offscreen_surface.h  yagl_onscreen.c  (+27 more)
EGL/gbm/: yagl_gbm_display.c  yagl_gbm_display.h  yagl_gbm_pixmap.c  yagl_gbm_pixmap.h  yagl_gbm_platform.c  yagl_gbm_platform.h  yagl_gbm_window.c  yagl_gbm_window.h
EGL/wayland/: yagl_wayland_display.c  yagl_wayland_display.h  yagl_wayland_platform.c  yagl_wayland_platform.h  yagl_wayland_window.c  yagl_wayland_window.h
EGL/x11/: yagl_dri2.c  yagl_dri2.h  yagl_dri3.c  yagl_dri3.h  yagl_x11_display.c  yagl_x11_display.h  yagl_x11_drawable.c  yagl_x11_drawable.h  yagl_x11_image.c  yagl_x11_image.h  yagl_x11_platform.c  yagl_x11_platform.h
GLES_common/: CMakeLists.txt  yagl_gles_array.c  yagl_gles_array.h  yagl_gles_buffer.c  yagl_gles_buffer.h  yagl_gles_calls.c  yagl_gles_calls.h  yagl_gles_calls.in  yagl_gles_context.c  yagl_gles_context.h  yagl_gles_framebuffer.c  yagl_gles_framebuffer.h  yagl_gles_image.c  yagl_gles_image.h  yagl_gles_pixel_formats.c  yagl_gles_pixel_formats.h  yagl_gles_renderbuffer.c  yagl_gles_renderbuffer.h  yagl_gles_sampler.c  yagl_gles_sampler.h  yagl_gles_texture.c  yagl_gles_texture.h  yagl_gles_texture_unit.c  yagl_gles_texture_unit.h  yagl_gles_types.h  yagl_gles_utils.c  yagl_gles_utils.h  yagl_gles_validate.c  yagl_gles_validate.h  yagl_gles_vertex_array.c  yagl_gles_vertex_array.h  yagl_host_gles_calls.c  yagl_host_gles_calls.h  yagl_pixel_format.c  yagl_pixel_format.h  yagl_texcompress_etc1.c  yagl_texcompress_etc1.h  yagl_texcompress_etc_tmp.h  yagl_transport_gl.h
GLESv1_CM/: CMakeLists.txt  yagl_gles1_calls.c  yagl_gles1_context.c  yagl_gles1_context.h  yagl_gles1_interface.c  yagl_gles1_validate.c  yagl_gles1_validate.h
GLESv2/: CMakeLists.txt  yagl_gles2_calls.c  yagl_gles2_context.c  yagl_gles2_context.h  yagl_gles2_interface.c  yagl_gles2_program.c  yagl_gles2_program.h  yagl_gles2_shader.c  yagl_gles2_shader.h  yagl_gles2_utils.c  yagl_gles2_utils.h  yagl_gles2_validate.c  yagl_gles2_validate.h  yagl_gles3_buffer_binding.c  yagl_gles3_buffer_binding.h  yagl_gles3_calls.c  yagl_gles3_context.c  yagl_gles3_context.h  yagl_gles3_pixel_formats.c  yagl_gles3_pixel_formats.h  yagl_gles3_program.c  yagl_gles3_program.h  yagl_gles3_query.c  yagl_gles3_query.h  yagl_gles3_sync.c  yagl_gles3_sync.h  yagl_gles3_transform_feedback.c  yagl_gles3_transform_feedback.h  yagl_gles3_validate.c  yagl_gles3_validate.h  yagl_glsl_lexer.l  yagl_glsl_parser.y  yagl_glsl_state.c  yagl_glsl_state.h  yagl_texcompress.c  yagl_texcompress.h  yagl_texcompress_etc2.c  yagl_texcompress_etc2.h
dummy/: CMakeLists.txt  dummy.h  egl_dummy.c  gles1_dummy.c  gles2_dummy.c
gbm/: CMakeLists.txt  yagl_gbm.c
include/: wayland-drm.h  yagl_client_context.h  yagl_client_image.h  yagl_client_interface.h  yagl_egl_fence.h  yagl_export.h  yagl_gbm.h  yagl_impl.h  yagl_ioctl.h  yagl_list.h  yagl_log.h  yagl_malloc.h  yagl_namespace.h  yagl_object.h  yagl_range_list.h  yagl_ref.h  yagl_render.h  yagl_resource.h  yagl_sharegroup.h  yagl_state.h  yagl_tex_image_binding.h  yagl_transport.h  yagl_types.h  yagl_utils.h  yagl_vector.h  yagl_wayland_egl.h
include/EGL/: eglplatform.h
include/GLES2/: gl2.h
packaging/: emul-opengl-yagl.service  emulator-yagl.spec  opengl-es-setup-yagl-env.sh  yagl.sh
pkgconfig/: gles11.pc  gles20.pc
scripts/: gen-yagl-calls.py  update-all-generated.sh
wayland-drm/: CMakeLists.txt  wayland-drm.c
wayland-egl/: CMakeLists.txt  yagl_wayland_egl.c
